# mini-codex

./: .env.example  Cargo.toml  README.md
src/: core.rs  history.rs  llm.rs  skills.rs  ui.rs
