[package]
name = "mini-codex"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "mini-codex"
path = "src/core.rs"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "14"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
